# vae4counts

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/tcga_pancancer/: activations.py  utils.py
src/tcga_pancancer/data/: __init__.py  coco2017.py  tcga.py
src/tcga_pancancer/layers/: __init__.py  mlp.py  variational.py
src/tcga_pancancer/models/: mixture.py  vae.py
src/vae4counts/: activations.py  utils.py
src/vae4counts/data/: coco2017.py  tcga.py
src/vae4counts/layers/: __init__.py  mlp.py  probabilistic.py
src/vae4counts/models/: __init__.py  mixture.py  vae.py
