[project]
name = "vae4counts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "graphviz>=0.21",
    "pyro-ppl[lightning]>=1.9.1",
    "scanpy[leiden,skmisc]>=1.11.5",
    "seaborn>=0.13.2",
    "torch>=2.9.1",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.14.9",
]
coco-example = ["wordcloud>=1.9.5"]


[tool.ruff.lint]
ignore = ["F403"]
